# Kmeans

./: README.md  create_datasets.R  plot_clusters.py
Kmeans/: CMakeLists.txt  CSVReader.cpp  CSVReader.h  Kmeans.cpp  Kmeans.h  PointND.cpp  PointND.h  Timer.h  main.cpp
Paper/: Paper.tex
Slides/: K-means.tex
